--- a/all-listings.html
+++ b/all-listings.html
@@ -29,32 +29,9 @@
 		<nav id="navigation" class="navigation">
 			
 			<ul>
-				<li class="current-menu-item"><a href="index.html">Home</a></li>
-				<li><a href="all-listings.html">Browse By</a>
-					<ul>
-						<li><a href="all-listings.html">All Listings</a></li>
-						<li><a href="#">Manufacturer</a>
-							<ul>
-								<li><a href="one-products.html">Aston Martin</a></li>
-								<li><a href="one-products.html">Audi</a></li>
-								<li><a href="one-products.html">BMW</a></li>
-								<li><a href="one-products.html">Chevrolet</a></li>
-								<li><a href="one-products.html">Mercedes Benz</a></li>
-								<li><a href="one-products.html">Ferrari</a></li>
-								<li><a href="one-products.html">Lexus</a></li>
-								<li><a href="one-products.html">Porsche</a></li>
-								<li><a href="one-products.html">Toyota</a></li>
-							</ul>
-						</li>
-						<li><a href="#">Body Type</a></li>
-						<li><a href="#">Engine Size</a></li>
-						<li><a href="#">Mileage</a></li>
-						<li><a href="#">Model Year</a></li>
-						<li><a href="#">Price Range</a></li>
-						<li><a href="#">Transmission</a></li>
-					</ul>
-				</li>
-				<li><a href="sales-reps.html">Sales Reps</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li class="current-menu-item"><a href="all-listings.html">Browse All</a></li>
+				<li><a href="sales-reps.html">Clerks Action</a></li>
 			</ul>
 			
 		</nav><!--/ #navigation-->
@@ -81,172 +58,146 @@
 					<ul class="recent-list-cars clearfix">
 
 						<li>
-							<a href="one-products.html" class="single-image picture">
-								<img src="images/temp/thumb-1.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">Details</a>
+							<a href="#" class="button orange">RESERVE</a>
 						</li>
 
 						<li>
-							<a href="one-products.html" class="single-image picture">
-								<img src="images/temp/thumb-2.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>
 
 						<li>
-							<a href="one-products.html" class="single-image picture video">
-								<img src="images/temp/thumb-3.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>
 
 						<li>
-							<a href="one-products.html" class="single-image picture">
-								<img src="images/temp/no-thumb.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>
 
 						<li>
-							<a href="one-products.html" class="single-image picture video">
-								<img src="images/temp/thumb-4.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>
 
 						<li>
-							<a href="one-products.html" class="single-image picture">
-								<img src="images/temp/thumb-5.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>
 
 						<li>
-							<a href="one-products.html" class="single-image picture">
-								<img src="images/temp/thumb-5.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>	
 						
 						<li>
-							<a href="one-products.html" class="single-image picture">
-								<img src="images/temp/no-thumb.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
+							<a href="#" class="list-meta">
 								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>
 
 						<li>
-							<a href="one-products.html" class="single-image picture video">
-								<img src="images/temp/thumb-4.jpg" alt="" />
-							</a>
 
-							<a href="one-products.html" class="list-meta">
-								<h6 class="title-list-item">2009 Aston Martin DB9</h6>
+							<a href="#" class="list-meta">
+								<h6 class="title-list-item">VTNAME</h6>
 							</a>
 
 							<div class="detailed">
-								<span class="cost">$8.966</span>
-								<span>1.4i TS 5Dr</span> <br />
-								<b>23000 Miles</b>	
+								<span class="cost">MODEL YEAR GASTYPE_ID</span>
+								<span>LOCATION_ID CITY</span> <br />
+								<b>ODOMETER</b>	
 							</div><!--/ .detailed-->
 
-							<a href="one-products.html" class="button orange">RESERVE</a>
+							<a href="#" class="button orange">RESERVE</a>
 
 						</li>
 
@@ -276,43 +227,31 @@
 				
 				<div class="widget-container widget_custom_search">
 
-					<h3 class="widget-title">Quick Search</h3>
+					<h3 class="widget-title">Find Your Car</h3>
 
 					<form action="/" id="boxpanel" class="form-panel" />
 
 						<fieldset>
 							<label for="manufacturer">Start date:</label>
 							<select id="manufacturer" name="manufacturer">
-								<option value="0" />Any
-								<option value="1" />Lorem
-								<option value="2" />Ipsum
 							</select>
 						</fieldset>
 
 						<fieldset>
 							<label for="minprice">End date:</label>
 							<select id="minprice" name="minprice">
-								<option value="0" />No min
-								<option value="1" />Lorem
-								<option value="2" />Ipsum
 							</select>
 						</fieldset>
 
 						<fieldset>
 							<label for="maxprice">Start time:</label>
 							<select id="maxprice" name="maxprice">
-								<option value="0" />No max
-								<option value="1" />Lorem
-								<option value="2" />Ipsum
 							</select>
 						</fieldset>
 
 						<fieldset>
 							<label for="trans">End time:</label>
 							<select id="trans" name="trans">
-								<option value="0" />Any
-								<option value="1" />Lorem
-								<option value="2" />Ipsum
 							</select>
 						</fieldset>
 
@@ -428,35 +367,6 @@
 	<!-- - - - - - - - - - - - - - - end Footer - - - - - - - - - - - - - - - - -->		
 	
 </div><!--/ .wrap-->
-
-<div class="account-wrapper">
-	
-	<form class="form-reg" method="post" action="" />
-		
-		<a href="#" class="log">Login</a>
-		
-		<p>
-			<label>Username*</label>
-			<input class="input-medium" type="text" />
-		</p>
-		
-		<p>
-			<label>Password*</label>
-			<input class="input-medium" type="password" />
-		</p>
-		
-		<p class="forgot-pass">
-			<a href="#">Forgot your password?</a>
-		</p>
-		
-		<p>
-			<a href="#" class="button dark enter-btn">Login</a>
-			<a href="#" class="button dark enter-btn">Create an account</a>
-		</p>
-		
-	</form><!--/ .form-reg-->
-	
-</div><!--/ .account-wrapper-->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
