--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 			
 			<ul>
 				<li class="current-menu-item"><a href="index.html">Home</a></li>
-				<li><a href="all-listings.html">Browse By</a>
+				<li><a href="all-listings.html">Browse All</a>
 					<ul>
 						<li><a href="all-listings.html">All Listings</a></li>
 						<li><a href="#">Manufacturer</a>
