--- a/clerk.html
+++ b/clerk.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<!--[if lte IE 8]>              <html class="ie8 no-js" lang="en">     <![endif]-->
-<!--[if IE 9]>					<html class="ie9 no-js" lang="en">     <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--> <html class="not-ie no-js" lang="en">  <!--<![endif]-->
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz|Open+Sans:400,600,700|Oswald|Electrolize' rel='stylesheet' type='text/css' />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-	<title>Car Management | Clerk</title>
-
-	<meta name="description" content="" />
-	<meta name="author" content="" />
+	<title>Car Rental | Home</title>
 
 	<link rel="shortcut" href="images/favicon.ico" />
 	<link rel="stylesheet" href="css/style.css" media="screen" />
 	<link rel="stylesheet" href="css/skeleton.css" media="screen" />
+	<link rel="stylesheet" href="sliders/flexslider/flexslider.css" media="screen" />
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css" media="screen" />
 
 	<!-- HTML5 Shiv + detect touch events -->
@@ -45,104 +41,91 @@
 	<!-- - - - - - - - - - - - - - end Header - - - - - - - - - - - - - - - - -->
 
 
-		<div class="main">
+	<div class="main">
 
-			<!-- - - - - - - - - - - - - - - Container - - - - - - - - - - - - - - - - -->
+		<!-- - - - - - - - - - - - - - - Container - - - - - - - - - - - - - - - - -->
 
-			<section class="container content clearfix">
+		<section class="container content clearfix">
 
-				<div class="sales-reps">
+			<div class="sales-reps">
 
-					<h3 class="widget-title">Car Management</h3>
+				<h3 class="widget-title">Car Management</h3>
 
-					<div class="row clearfix">
+				<div class="row clearfix">
 
-						<div class="item">
 
-							<ul>
-								<li><h3>Car_name_1</h3></li>
-								<li><b>RID:</b>&nbsp;<span> 567-8901 </span> </li>
-								<li><b>VID:</b>&nbsp;<span> 567-8902</span></li>
-								<li><b>Dlicense:</b>&nbsp;<span> 567-8903</span></li>
-								<li><b>FromDate:</b>&nbsp;<span>2017-09-10</span></li>
-								<li><b>FromTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToDate:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>Price:</b>&nbsp;<span> 567</span></li>
-								<li><a href="#" class="button orange">Rent</a>
-									<a href="#" class="button orange">Return</a></li>
-							</ul>
+					</div><!--/ .item-->
 
-						</div><!--/ .item-->
+					<div class="item">
 
-						<div class="item">
+						<ul>
+							<li><h3>Car_name_1</h3></li>
+							<li><b>RID:</b>&nbsp;<span> 567-8901 </span> </li>
+							<li><b>VID:</b>&nbsp;<span> 567-8902</span></li>
+							<li><b>Dlicense:</b>&nbsp;<span> 567-8903</span></li>
+							<li><b>FromDate:</b>&nbsp;<span>2017-09-10</span></li>
+							<li><b>FromTime:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>ToDate:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>ToTime:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>Price:</b>&nbsp;<span> 567</span></li>
+							<li><a href="#" class="button orange">Rent</a>
+								<a href="#" class="button orange">Return</a></li>
+						</ul>
 
-							<ul>
-								<li><h3>Car_name_1</h3></li>
-								<li><b>RID:</b>&nbsp;<span> 567-8901 </span> </li>
-								<li><b>VID:</b>&nbsp;<span> 567-8902</span></li>
-								<li><b>Dlicense:</b>&nbsp;<span> 567-8903</span></li>
-								<li><b>FromDate:</b>&nbsp;<span>2017-09-10</span></li>
-								<li><b>FromTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToDate:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>Price:</b>&nbsp;<span> 567</span></li>
-								<li><a href="#" class="button orange">Rent</a>
-									<a href="#" class="button orange">Return</a></li>
-							</ul>
+					</div><!--/ .item-->
 
-						</div><!--/ .item-->
+					<div class="item">
 
-						<div class="item">
+						<ul>
+							<li><h3>Car_name_1</h3></li>
+							<li><b>RID:</b>&nbsp;<span> 567-8901 </span> </li>
+							<li><b>VID:</b>&nbsp;<span> 567-8902</span></li>
+							<li><b>Dlicense:</b>&nbsp;<span> 567-8903</span></li>
+							<li><b>FromDate:</b>&nbsp;<span>2017-09-10</span></li>
+							<li><b>FromTime:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>ToDate:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>ToTime:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>Price:</b>&nbsp;<span> 567</span></li>
+							<li><a href="#" class="button orange">Rent</a>
+								<a href="#" class="button orange">Return</a></li>
+						</ul>
 
-							<ul>
-								<li><h3>Car_name_1</h3></li>
-								<li><b>RID:</b>&nbsp;<span> 567-8901 </span> </li>
-								<li><b>VID:</b>&nbsp;<span> 567-8902</span></li>
-								<li><b>Dlicense:</b>&nbsp;<span> 567-8903</span></li>
-								<li><b>FromDate:</b>&nbsp;<span>2017-09-10</span></li>
-								<li><b>FromTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToDate:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>Price:</b>&nbsp;<span> 567</span></li>
-								<li><a href="#" class="button orange">Rent</a>
-									<a href="#" class="button orange">Return</a></li>
-							</ul>
+					</div><!--/ .item-->
 
-						</div><!--/ .item-->
+					<div class="item last">
 
-						<div class="item last">
+						<ul>
+							<li><h3>Car_name_1</h3></li>
+							<li><b>RID:</b>&nbsp;<span> 567-8901 </span> </li>
+							<li><b>VID:</b>&nbsp;<span> 567-8902</span></li>
+							<li><b>Dlicense:</b>&nbsp;<span> 567-8903</span></li>
+							<li><b>FromDate:</b>&nbsp;<span>2017-09-10</span></li>
+							<li><b>FromTime:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>ToDate:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>ToTime:</b>&nbsp;<span> 2017-09-10</span></li>
+							<li><b>Price:</b>&nbsp;<span> 567</span></li>
+							<li><a href="#" class="button orange">Rent</a>
+								<a href="#" class="button orange">Return</a></li>
+						</ul>
 
-							<ul>
-								<li><h3>Car_name_1</h3></li>
-								<li><b>RID:</b>&nbsp;<span> 567-8901 </span> </li>
-								<li><b>VID:</b>&nbsp;<span> 567-8902</span></li>
-								<li><b>Dlicense:</b>&nbsp;<span> 567-8903</span></li>
-								<li><b>FromDate:</b>&nbsp;<span>2017-09-10</span></li>
-								<li><b>FromTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToDate:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>ToTime:</b>&nbsp;<span> 2017-09-10</span></li>
-								<li><b>Price:</b>&nbsp;<span> 567</span></li>
-								<li><a href="#" class="button orange">Rent</a>
-									<a href="#" class="button orange">Return</a></li>
-							</ul>
+					</div><!--/ .item-->
 
-						</div><!--/ .item-->
+				</div><!--/ .row-->
 
-					</div><!--/ .row-->
+			</div>
 
-				</div>
-
-			</section><!--/.container -->
-
-			<!-- - - - - - - - - - - - - end Container - - - - - - - - - - - - - - - - -->
-
-		</div><!--/ .main-->
+		</section><!--/.container -->
 
 			<!-- - - - - - - - - - - - - - end Content - - - - - - - - - - - - - - - - -->
 
 
 
+
+		</section><!--/.container -->
+
+		<!-- - - - - - - - - - - - - end Container - - - - - - - - - - - - - - - - -->
+
+	</div><!--/ .main-->
 
 
 	<!-- - - - - - - - - - - - - - - Footer - - - - - - - - - - - - - - - - -->
