--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="#" class="button orange">RESERVE &raquo;</a>
+							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
@@ -82,7 +82,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="#" class="button orange">RESERVE &raquo;</a>
+							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
@@ -100,7 +100,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="#" class="button orange">RESERVE &raquo;</a>
+							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
@@ -118,7 +118,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="#" class="button orange">RESERVE &raquo;</a>
+							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
@@ -136,7 +136,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="#" class="button orange">RESERVE &raquo;</a>
+							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
