--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ul>
 				<li class="current-menu-item"><a href="index.html">Home</a></li>
 				<li><a href="all-listings.php">Browse All</a></li>
-				<li><a href="sales-reps.html">Clerks Action</a></li>
+				<li><a href="reportGenerator.php">Clerks Action</a></li>
 			</ul>
 			
 		</nav><!--/ #navigation-->
