--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ul>
 				<li class="current-menu-item"><a href="index.html">Home</a></li>
 				<li><a href="all-listings.php">Browse All</a></li>
-				<li><a href="reportGenerator.php">Clerks Action</a></li>
+				<li><a href="sales-reps.html">Clerks Action</a></li>
 			</ul>
 			
 		</nav><!--/ #navigation-->
@@ -64,7 +64,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
+							<a href="#" class="button orange">RESERVE &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
@@ -82,7 +82,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
+							<a href="#" class="button orange">RESERVE &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
@@ -100,7 +100,7 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
+							<a href="#" class="button orange">RESERVE &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
@@ -118,7 +118,25 @@
 								<dd><span class="heading">$25896</span></dd>
 							</dl><!--/ .auto-detailed-->
 
-							<a href="all-listings.php" class="button orange">Checkout Our Cars &raquo;</a>
+							<a href="#" class="button orange">RESERVE &raquo;</a>
+
+						</div><!--/ .caption-entry-->
+					</div><!--/ .caption-->
+				</li>
+				<li>
+					<img src="images/sliders/slide-5.jpg" alt="" />
+
+					<div class="caption">
+						<div class="caption-entry">
+
+							<dl class="auto-detailed clearfix">
+								<dt><span class="model">2005 Honda</span></dt>
+								<dd class="media-hidden"><b>1.8 XRS Sedan</b></dd>
+								<dd class="media-hidden"><b>36000 Miles</b></dd>
+								<dd><span class="heading">$25896</span></dd>
+							</dl><!--/ .auto-detailed-->
+
+							<a href="#" class="button orange">RESERVE &raquo;</a>
 
 						</div><!--/ .caption-entry-->
 					</div><!--/ .caption-->
